dev/core/vendor/liblc3/include/lc3.h



/**
 * Limitations
 * - On the bitrate, in bps
 * - On the size of the frames in bytes
 * - On the number of samples by frames
 */

#define LC3_MIN_BITRATE         16000
#define LC3_MAX_BITRATE        320000
#define LC3_HR_MAX_BITRATE     672000

#define LC3_MIN_FRAME_BYTES        20
#define LC3_MAX_FRAME_BYTES       400
#define LC3_HR_MAX_FRAME_BYTES    625


/**
 * PCM Sample Format
 *   S16      Signed 16 bits, in 16 bits words (int16_t)
 *   S24      Signed 24 bits, using low three bytes of 32 bits words (int32_t).
 *            The high byte sign extends (bits 31..24 set to b23).
 *   S24_3LE  Signed 24 bits packed in 3 bytes little endian
 *   FLOAT    Floating point 32 bits (float type), in range -1 to 1
 */

enum lc3_pcm_format {
    LC3_PCM_FORMAT_S16,
    LC3_PCM_FORMAT_S24,
    LC3_PCM_FORMAT_S24_3LE,
    LC3_PCM_FORMAT_FLOAT,
};



/**
 * Handle
 */

typedef struct lc3_encoder *lc3_encoder_t;

typedef struct lc3_decoder *lc3_decoder_t;



/**
 * Return the number of PCM samples in a frame
 * hrmode          Enable High-Resolution mode (48000 and 96000 sample rates)
 * dt_us           Frame duration in us, 2500, 5000, 7500 or 10000
 * sr_hz           Sample rate in Hz, 8000, 16000, 24000, 32000, 48000 or 96000
 * return          Number of PCM samples, -1 on bad parameters
 */
LC3_EXPORT int lc3_hr_frame_samples(bool hrmode, int dt_us, int sr_hz);


LC3_EXPORT int lc3_frame_samples(int dt_us, int sr_hz);


LC3_EXPORT int lc3_frame_bytes(int dt_us, int bitrate);


LC3_EXPORT int lc3_frame_block_bytes(int dt_us, int nframes, int bitrate);


LC3_EXPORT int lc3_resolve_bitrate(int dt_us, int nbytes);


LC3_EXPORT int lc3_delay_samples(int dt_us, int sr_hz);


LC3_EXPORT unsigned lc3_encoder_size(int dt_us, int sr_hz);


LC3_EXPORT lc3_encoder_t lc3_setup_encoder(
    int dt_us, int sr_hz, int sr_pcm_hz, void *mem);


/**
 * Disable LTPF analysis
 * encoder        Handle of the encoder
 *
 * LTPF analysis is known to take a lot of CPU time and work quite bad on
 * synthetic signals such as sine waves, so it might be beneficial to
 * disable it in such cases.
 */
LC3_EXPORT void lc3_encoder_disable_ltpf(
    lc3_encoder_t encoder);


/**
 * Encode a frame
 * encoder         Handle of the encoder
 * fmt             PCM input format
 * pcm, stride     Input PCM samples, and count between two consecutives
 * nbytes          Target size, in bytes, of the frame
 * out             Output buffer of `nbytes` size
 * return          0: On success  -1: Wrong parameters
 */
LC3_EXPORT int lc3_encode(
    lc3_encoder_t encoder, enum lc3_pcm_format fmt,
    const void *pcm, int stride, int nbytes, void *out);


LC3_EXPORT unsigned lc3_decoder_size(int dt_us, int sr_hz);


LC3_EXPORT lc3_decoder_t lc3_setup_decoder(
    int dt_us, int sr_hz, int sr_pcm_hz, void *mem);


/**
 * Decode a frame
 * decoder         Handle of the decoder
 * in, nbytes      Input bitstream, and size in bytes, NULL performs PLC
 * fmt             PCM output format
 * pcm, stride     Output PCM samples, and count between two consecutives
 * return          0: On success  1: PLC operated  -1: Wrong parameters
 */
LC3_EXPORT int lc3_decode(
    lc3_decoder_t decoder, const void *in, int nbytes,
    enum lc3_pcm_format fmt, void *pcm, int stride);